[gd_scene load_steps=7 format=2]

[ext_resource path="res://3DPart1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://3DPart2.tscn" type="PackedScene" id=3]
[ext_resource path="res://default_env.tres" type="Environment" id=5]

[sub_resource type="World" id=3]
environment = ExtResource( 5 )

[sub_resource type="World" id=2]
environment = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 424.0
margin_bottom = 324.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 400, 300 )
own_world = true
world = SubResource( 3 )
handle_input_locally = false
render_target_update_mode = 3

[node name="3Dpart1" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="TextureRect1" type="TextureRect" parent="."]
margin_left = 448.0
margin_top = 24.0
margin_right = 648.0
margin_bottom = 174.0

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 656.0
margin_top = 176.0
margin_right = 856.0
margin_bottom = 326.0

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 25.0
margin_top = 403.0
margin_right = 225.0
margin_bottom = 553.0
hint_tooltip = "TextureRect3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 400, 300 )
size_override_stretch = true
own_world = true
world = SubResource( 2 )
handle_input_locally = false
render_target_update_mode = 3

[node name="3Dpart2" parent="Viewport" instance=ExtResource( 3 )]
